<resources>
    <string name="app_name">TestGos</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_import">Импорт</string>
    <string name="button_export">Экспорт</string>
    <string name="button_report">Отчет</string>
    <string name="button_add">Добавить</string>
    <string name="text_name">Название</string>
    <string name="text_client">Клиент</string>
    <string name="button_save">Спаси и сохрани</string>
    <string name="button_delete">Удоли</string>
    <string name="text_new">Новые</string>
    <string name="text_in_use">Используются</string>
    <string name="text_deleted">Списаны</string>
</resources>