<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".main.MainFragment">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="423dp"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listCarsMain"
            android:layout_width="match_parent"
            android:layout_height="229dp" />

        <Button
            android:id="@+id/buttonAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_report" />

        <Button
            android:id="@+id/buttonExport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_export" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_import" />
    </LinearLayout>

</FrameLayout>