<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".edit.EditFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:ems="10"
            android:hint="@string/text_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/editTextClient"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:ems="10"
            android:hint="@string/text_client"
            android:inputType="text" />

        <Spinner
            android:id="@+id/spinnerCarState"
            android:layout_width="match_parent"
            android:layout_height="76dp" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save" />

        <Button
            android:id="@+id/buttonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_delete" />
    </LinearLayout>
</FrameLayout>