<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".report.ReportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewNew"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:text="@string/text_new" />

        <ListView
            android:id="@+id/list_report_new"
            android:layout_width="match_parent"
            android:layout_height="122dp" />

        <TextView
            android:id="@+id/textViewInUse"
            android:layout_width="match_parent"
            android:layout_height="59dp"
            android:text="@string/text_in_use" />

        <ListView
            android:id="@+id/list_report_in_use"
            android:layout_width="match_parent"
            android:layout_height="155dp" />

        <TextView
            android:id="@+id/textViewDeleted"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:text="@string/text_deleted" />

        <ListView
            android:id="@+id/list_report_deleted"
            android:layout_width="match_parent"
            android:layout_height="234dp" />
    </LinearLayout>
</FrameLayout>